# blog

./: .gitignore  config.yaml  flake.nix  pyproject.toml
.github/workflows/: hugo.yml
archetypes/: posts.org
content/: site-features.org
content/posts/: add-optional-swap-for-nixos.org  configuring-ldac-nixos.org  debug-gitlab-with-metasploit.org  download-games-from-archive.org  llama2-fine-tunning-cpu.org  migrate-timescale-hypertables-to-vanilla-postgres.org  nostr-intro.org  opensource-governance.org  opensource-licensing-compliance.org  psx-rom-optimization.org  remove-old-pipelines-from-gitlab-backup.org  rust-development-notes.org  terraform-migrate-remote.org  waydroid-on-x11-on-nixos.org
content/posts/btrfs-notes/: index.org
content/posts/btrfs-notes/examples/: metadata-migration-failed-state.txt  metadata-migration-final-state.txt  metadata-migration-recovery-state.txt  metadata-migration-timeline.txt
content/posts/emacs-debug-font/: index.org
content/posts/patching-age-of-wonders-leader-level/: AoWEPACK.dpl  index.org
public/: papers.bib
themes/hermit/assets/scss/: _predefined.scss  style.scss
themes/hermit/layouts/partials/: footer.html  latex.html
themes/hermit/layouts/posts/: single.html
themes/rafa/assets/scss/: _normalize.scss  _predefined.scss  style.scss
themes/rafa/layouts/: index.html
themes/rafa/layouts/_default/: single.html
themes/rafa/layouts/features/: single.html
themes/rafa/layouts/partials/: extra-foot.html  favicons.html  header.html  process-content.html
themes/rafa/static/: site.webmanifest
(+7 files in other folders)
